# Bogey

./: .gitignore  CMakeLists.txt  README.md  conanfile.py
.github/workflows/: build.yml  ci.yml
code/: CMakeLists.txt
code/core/: CMakeLists.txt  utils.cpp  utils.h
code/main/: CMakeLists.txt  main.cpp
code/tests/: CMakeLists.txt  utilsTests.cpp
